# File-sense

./: README.md  into.toml  pyproject.toml  test_scanner.py
core/: filesense.py  scanner.py
filesense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
main/: filesense.py  scanner.py
