[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "filesense"
version = "1.0.0"
description = "CLI tool to identify file types using magic bytes (fleep)"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["fleep"]

[project.scripts]
filesense = "core.filesense:main"

[tool.setuptools.packages.find]
where = ["core"]